--- a/automation.html
+++ b/automation.html
@@ -40,7 +40,7 @@
     const logEl = document.getElementById('log');
     const log = (msg) => logEl.textContent += msg + "\n";
 
-    const perplexityKey = "YOUR_PERPLEXITY_API_KEY"; // 🔑 Add your API key here
+    const perplexityKey = "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"; // 🔑 Add your API key here
     const baseUrl = "https://api.perplexity.ai/chat/completions";
 
     async function fetchPerplexity(prompt) {
